--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/font": "^14.2.15",
+    "bootstrap": "^5.3.3",
+    "lucide-react": "^0.475.0",
+    "next": "15.1.7",
     "react": "^19.0.0",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
-    "next": "15.1.7"
+    "react-hot-toast": "^2.5.2",
+    "ticket_booking_frontend": "file:"
   },
   "devDependencies": {
     "postcss": "^8",
