--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
+    "react-datepicker": "^8.1.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "ticket_booking_frontend": "file:"
